--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "dependencies": {
     "hubot": ">=2.4.8",
     "hubot-scripts": ">= 2.4.1",
-    "optparse": "1.0.3"
+    "optparse": "1.0.3",
+    "hubot-irc": ">= 0.0.1"
   },
 
   "engines": {
     "node": ">= 0.8.x",
-    "npm": "1.1.x"
+    "npm": ">= 1.1.x"
   }
 }
