--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "hubot-scripts": ">= 2.4.1",
     "optparse": "1.0.3",
     "hubot-irc": ">= 0.0.1",
-    "nodepie": ">= 0.5.1"
+    "nodepie": ">= 0.5.1",
+    "yelp": ">= 0.1.1"
   },
 
   "engines": {
